<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="FeedbackMru" Id="{e5da7f68-9b82-4c49-ac9c-e08f2e5a864f}">
    <Declaration><![CDATA[TYPE FeedbackMru :
STRUCT
	heave : REAL;
	heave_t : REAL;
	heave_tt : REAL;
	turn_rate : REAL;
	phi : REAL;
	theta : REAL;
	psi : REAL;
	wx : REAL;
	wy : REAL;
	wz : REAL;
	wx_t : REAL;
	wy_t : REAL;
	wz_t : REAL;
	x_t : REAL;
	y_t : REAL;
	z_t : REAL;
	x_tt : REAL;
	y_tt : REAL;
	z_tt : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>